--- a/roskilde_autocenter_index.html
+++ b/roskilde_autocenter_index.html
@@ -8,6 +8,34 @@
 </head>
 <body>
     
+    <div class="topnav" id="myTopnav">
+        <div class="logo">
+            <img src="img/logo_roskilde.png" width="100px" height="100px">
+        </div>
+        <a href="#home" class="active">forside</a>
+        <a href="#">Biler til salg</a>
+        <a href="#">Galleri</a>
+        <a href="#">Om Os</a>
+        <a href="#">kontakt</a>
+        <!-- Hamburger menu ikon + java funktion -->
+        <a href="javascript:void(0);" 
+        class="icon" 
+        onclick="myFunction()">
+        <i class="fa fa-list" aria-hidden="true"></i>
+        </a>
+    </div>
+
+    <!-- JAVA SCRIPT til BurgerMenu -->
+    <script>
+    function myFunction() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "topnav") {
+        x.className += " responsive";
+      } else {
+        x.className = "topnav";
+      }
+    }
+    </script>
     
 </body>
 </html>
