--- a/første_bil_kontakt.html
+++ b/første_bil_kontakt.html
@@ -7,40 +7,38 @@
     <link rel= "stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Min Første Bil</title>
+    <title>Min Første Bil Om os/ Kontakt</title>
 </head>
 <body>
     <div class="topnav" id="myTopnav">
 
-        <a href="#" class="active">Forside</a>
+        <a href="første_bil_forside.html" class="active">Forside</a>
         <div class="dropdown">
             <button class="dropbtn">Vær opmærksom på
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="#">Gæld og Billån</a>
-                <a href="#">Forsikring</a>
-                <a href="#">Omregistrering af bil</a>
-                <a href="#">Værditab</a>
-                <a href="#">Rentebyrde og Låneomkostninger</a>
-                
+                <a href="gb">Gæld og Billån</a>
+                <a href="f">Forsikring</a>
+                <a href="ob">Omregistrering af bil</a>
+                <a href="v">Værditab</a>
+                <a href="rl">Rentebyrde og Låneomkostninger</a>
             </div>
         </div>
         <div class="dropdown">
-            <button class="dropbtn">Finansiering af bil
+            <button class="dropbtn">Finansering af bil
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="#">Co2-ejerafgift</a>
-                <a href="#">Grøn ejerafgift</a>
-                <a href="#">Vægtafgift</a>
-                <a href="#">Bilsyn</a>
-                <a href="#">Vejhjælp</a>
-                <a href="#">Service</a>
-                
+                <a href="ce">Co2-ejerafgift</a>
+                <a href="ge">Grøn ejerafgift</a>
+                <a href="ve">Vægtafgift</a>
+                <a href="b">Bilsyn</a>
+                <a href="vh">Vejhjælp</a>
+                <a href="s">Service</a>
             </div>
         </div>
-        <a href="#">Om os</a>
+        <a href="første_bil_kontakt.html">Om os</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 
     </div>  
