--- a/første_bil_opmærksom.html
+++ b/første_bil_opmærksom.html
@@ -3,9 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css_stylesheet.css">
+    <link rel= "stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>Min Første Bil Vær opmærksom på</title>
 </head>
 <body>
+    <div class="topnav" id="myTopnav">
+
+        <a href="første_bil_forside.html" class="active">Forside</a>
+        <div class="dropdown">
+            <button class="dropbtn">Vær opmærksom på
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="gb">Gæld og Billån</a>
+                <a href="f">Forsikring</a>
+                <a href="ob">Omregistrering af bil</a>
+                <a href="v">Værditab</a>
+                <a href="rl">Rentebyrde og Låneomkostninger</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Finansering af bil
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="ce">Co2-ejerafgift</a>
+                <a href="ge">Grøn ejerafgift</a>
+                <a href="ve">Vægtafgift</a>
+                <a href="b">Bilsyn</a>
+                <a href="vh">Vejhjælp</a>
+                <a href="s">Service</a>
+            </div>
+        </div>
+        <a href="første_bil_kontakt.html">Om os</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+
+    </div>  
 
     <div id="gb">Gæld og Billån </div>
     <div id="f">Forsikring </div>
