--- a/første_bil_finansering.html
+++ b/første_bil_finansering.html
@@ -42,6 +42,23 @@
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 
     </div>  
+
+
+
+
+
+    <!-- JAVA SCRIPT -->
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
+        }
+    </script>
+
     
 </body>
 </html>
