--- a/første_bil_forside.html
+++ b/første_bil_forside.html
@@ -43,5 +43,19 @@
 
     </div>  
     
+
+
+    <!-- JAVA SCRIPT -->
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
+        }
+    </script>
+
 </body>
 </html>
