--- a/første_bil_kontakt.html
+++ b/første_bil_kontakt.html
@@ -43,9 +43,9 @@
 
     </div>  
 
-    <div class="header">
+    <div class="headerkontakt">
         <img src="img/header_backgrund.png" alt="" style="width: 100%;">
-        <div class="headerText">
+        <div class="headerTextkontakt">
              <b>Om os</b>
              <br><br><br>
              <a class="button" href="#kontakt">kontaktformular</a>
@@ -68,7 +68,7 @@
 
         <div class="imgContainer">
             <div class="florida">
-                <div class="container">
+                <div class="containerperson">
                     <img src="img/florida_img.png" alt="Avatar" class="image">
                     <div class="overlay">
                     <div class="text">Florida</div>
@@ -77,7 +77,7 @@
             </div>
 
             <div class="jessica">
-                <div class="container">
+                <div class="containerperson">
                     <img src="img/jessica_img.png" alt="Avatar" class="image">
                     <div class="overlay">
                     <div class="text">Jessica</div>
@@ -101,7 +101,7 @@
             <br><br>
 
         </div>
-        <div class="container"> 
+        <div class="kontaktcontainer"> 
         <form action="/action_page.php">
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Your name..">
