--- a/første_bil_forside.html
+++ b/første_bil_forside.html
@@ -10,19 +10,21 @@
     <title>Min Første Bil</title>
 </head>
 <body>
+
     <div class="topnav" id="myTopnav">
 
-        <a href="første_bil_forside.html" class="active">Forside</a>
+        <a href="første_bil_forside.html" class="active"><img src="img/logo.png" height="30px"></a>
+         <a href="første_bil_kontakt.html">Om os</a>
         <div class="dropdown">
             <button class="dropbtn">Vær opmærksom på
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="gb">Gæld og Billån</a>
-                <a href="f">Forsikring</a>
-                <a href="ob">Omregistrering af bil</a>
-                <a href="v">Værditab</a>
-                <a href="rl">Rentebyrde og Låneomkostninger</a>
+                <a href="første_bil_opmærksom.html#gb">Gæld og Billån</a>
+                <a href="første_bil_opmærksom.html#f">Forsikring</a>
+                <a href="første_bil_opmærksom.html#ob">Omregistrering af bil</a>
+                <a href="første_bil_opmærksom.html#v">Værditab</a>
+                <a href="første_bil_opmærksom.html#rl">Rentebyrde og Låneomkostninger</a>
             </div>
         </div>
         <div class="dropdown">
@@ -30,15 +32,14 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="ce">Co2-ejerafgift</a>
-                <a href="ge">Grøn ejerafgift</a>
-                <a href="ve">Vægtafgift</a>
-                <a href="b">Bilsyn</a>
-                <a href="vh">Vejhjælp</a>
-                <a href="s">Service</a>
+                <a href="første_bil_finansering.html#ce">Co2-ejerafgift</a>
+                <a href="første_bil_finansering.html#ge">Grøn ejerafgift</a>
+                <a href="første_bil_finansering.html#ve">Vægtafgift</a>
+                <a href="første_bil_finansering.html#b">Bilsyn</a>
+                <a href="første_bil_finansering.html#vh">Vejhjælp</a>
+                <a href="første_bil_finansering.html#s">Service</a>
             </div>
         </div>
-        <a href="første_bil_kontakt.html">Om os</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 
     </div>  
