--- a/første_bil_forside.html
+++ b/første_bil_forside.html
@@ -14,7 +14,7 @@
     <div class="topnav" id="myTopnav">
 
         <a href="første_bil_forside.html" class="active"><img src="img/logo.png" height="30px"></a>
-         <a href="første_bil_kontakt.html">Om os</a>
+        <a href="første_bil_kontakt.html">Om os</a>
         <div class="dropdown">
             <button class="dropbtn">Vær opmærksom på
                 <i class="fa fa-caret-down"></i>
@@ -38,10 +38,12 @@
                 <a href="første_bil_finansering.html#b">Bilsyn</a>
                 <a href="første_bil_finansering.html#vh">Vejhjælp</a>
                 <a href="første_bil_finansering.html#s">Service</a>
+                <a href="første_bil_finansering.html#be">Brændstod/El</a>
+                <a href="første_bil_finansering.html#bd">Bildæk</a>
+                <a href="første_bil_finansering.html#d">Diverse</a>
             </div>
         </div>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-
     </div>  
 
     <div class="headerforside">
@@ -52,8 +54,8 @@
         <div class="headerTextforside">
             Er du <b>nervøs</b> for at <b>købe</b> din første <b>bil?</b> <br>
             Vi vil gerne hjælpe dig med at lære, hvordan du bedst forbereder dig økonomisk.
-             <br><br>
-             <a class="button" href="#mfb">kom i gang!</a>
+            <br><br>
+            <a class="button" href="#mfb">kom i gang!</a>
         </div>
     </div>
     
@@ -143,6 +145,7 @@
     <div class="footer">
         <p> Min Første bil - mimførstebil@gmail.com - +45 12 34 56 78 </p>
     </div>
+    
     <!-- JAVA SCRIPT -->
     <script>
         function myFunction() {
