--- a/første_bil_kontakt.html
+++ b/første_bil_kontakt.html
@@ -14,7 +14,7 @@
     <div class="topnav" id="myTopnav">
 
         <a href="første_bil_forside.html" class="active"><img src="img/logo.png" height="30px"></a>
-         <a href="første_bil_kontakt.html">Om os</a>
+        <a href="første_bil_kontakt.html">Om os</a>
         <div class="dropdown">
             <button class="dropbtn">Vær opmærksom på
                 <i class="fa fa-caret-down"></i>
@@ -38,18 +38,20 @@
                 <a href="første_bil_finansering.html#b">Bilsyn</a>
                 <a href="første_bil_finansering.html#vh">Vejhjælp</a>
                 <a href="første_bil_finansering.html#s">Service</a>
+                <a href="første_bil_finansering.html#be">Brændstod/El</a>
+                <a href="første_bil_finansering.html#bd">Bildæk</a>
+                <a href="første_bil_finansering.html#d">Diverse</a>
             </div>
         </div>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-
     </div>   
 
     <div class="headerkontakt">
         <img src="img/header_backgrund_kontakt.png" alt="" style="width: 100%;">
         <div class="headerTextkontakt">
-             <b>Om os</b>
-             <br><br><br>
-             <a class="button" href="#kontakt">kontaktformular</a>
+            <b>Om os</b>
+            <br><br><br>
+            <a class="button" href="#kontakt">kontaktformular</a>
         </div>
     </div>
 
