--- a/første_bil_forside.html
+++ b/første_bil_forside.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button class="dropbtn">Finansering af bil
+            <button class="dropbtn">Finansiering af bil
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
