--- a/første_bil_kontakt.html
+++ b/første_bil_kontakt.html
@@ -106,14 +106,14 @@
         </div>
         <div class="kontaktcontainer"> 
         <form action="/action_page.php">
-            <label for="fname">First Name</label>
+            <label for="fname">Navn</label>
             <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-            <label for="lname">Last Name</label>
+            <label for="lname">Efternavn</label>
             <input type="text" id="lname" name="lastname" placeholder="Your last name..">
 
            
-            <label for="subject">Subject</label>
+            <label for="subject">Skriv her...</label>
             <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
             <a class="button" href="#id">Send</a>
