--- a/første_bil_forside.html
+++ b/første_bil_forside.html
@@ -128,14 +128,14 @@
         <div class="kontaktcontainer"> 
         <form action="/action_page.php">
             <label for="fname">Navn</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your name..">
+            <input type="text" id="fname" name="firstname" placeholder="Fornavn...">
 
             <label for="lname">Efternavn</label>
-            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+            <input type="text" id="lname" name="lastname" placeholder="Efternavn...">
 
            
-            <label for="subject">Skriv her...</label>
-            <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+            <label for="subject">Emne</label>
+            <textarea id="subject" name="subject" placeholder="Skriv her..." style="height:200px"></textarea>
 
             <a class="button" href="#id">Send</a>
         </form>
