--- a/første_bil_kontakt.html
+++ b/første_bil_kontakt.html
@@ -116,7 +116,7 @@
             <label for="subject">Emne</label>
             <textarea id="subject" name="subject" placeholder="Skriv her..." style="height:200px"></textarea>
 
-            <a class="button" href="#id">Send</a>
+            <a class="button" href="første_bil_forside.html">Send</a>
         </form>
         </div>
 
