--- a/første_bil_kontakt.html
+++ b/første_bil_kontakt.html
@@ -122,7 +122,7 @@
 
     </div>
 
-    <div class="footer">
+    <div class="footergul">
         <p> Min Første bil - mimførstebil@gmail.com - +45 12 34 56 78 </p>
     </div>
 
